--- a/ansible/deploy-anonymous-chat.yml
+++ b/ansible/deploy-anonymous-chat.yml
@@ -60,6 +60,7 @@
       docker_container:
         name: rabbitmq
         image: rabbitmq:3.6-alpine
+        state: started
         restart_policy: always
 
     - name: Run app container on remote
